--- a/InwardPolicy.Core.Api/InwardPolicy.Core.Api.csproj
+++ b/InwardPolicy.Core.Api/InwardPolicy.Core.Api.csproj
@@ -1,14 +1,16 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.17" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\InwardPolicy.BusinessEntity\InwardPolicy.BusinessEntity.csproj" />
     <ProjectReference Include="..\InwardPolicy.BusinessLayer\InwardPolicy.BusinessLayer.csproj" />
   </ItemGroup>
 
