--- a/InwardPolicy.BusinessLayer/InwardPolicy.BusinessLayer.csproj
+++ b/InwardPolicy.BusinessLayer/InwardPolicy.BusinessLayer.csproj
@@ -1,10 +1,11 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\InwardPolicy.BusinessEntity\InwardPolicy.BusinessEntity.csproj" />
     <ProjectReference Include="..\InwardPolicy.DataAccessLayer\InwardPolicy.DataAccessLayer.csproj" />
   </ItemGroup>
 
