--- a/InwardPolicy.Helper/InwardPolicy.Helper.csproj
+++ b/InwardPolicy.Helper/InwardPolicy.Helper.csproj
@@ -5,8 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Oracle.ManagedDataAccess.Core" Version="23.6.1" />
-    <PackageReference Include="System.Data.OracleClient" Version="1.0.8" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.17" />
   </ItemGroup>
 
 </Project>
